@@ -308,6 +308,12 @@
     <td></td>
     <td></td>
   </tr>
+  <tr>
+    <td>__gnu_cxx::bitmap_allocator&lt;T&gt;</td>
+    <td>&lt;ext/bitmap_allocator.h&gt;</td>
+    <td></td>
+    <td></td>
+  </tr>
 </table>
 
    <p>More details on each of these allocators follows. </p>
@@ -379,6 +385,14 @@
      <p>A high-performance
      fixed-size allocator. It has its own documentation, found <a
      href="../ext/mt_allocator.html">here</a>.
+     </p>
+     </li>
+
+     <li><code>bitmap_allocator</code> 
+     <p>A high-performance allocator that uses a bit-map to keep track
+     of the used and unused memory locations. It has its own
+     documentation, found <a
+     href="../ext/ballocator_doc.txt">here</a>.
      </p>
      </li>
    </ul>
